--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Jon Oops</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,17 +19,17 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Oopser</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
+									<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+									<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> -->
+									<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
+									<!-- <li>
 										<a href="#">Submenu</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
@@ -37,11 +37,13 @@
 											<li><a href="#">Option 3</a></li>
 											<li><a href="#">Option 4</a></li>
 										</ul>
-									</li>
+									</li> -->
 								</ul>
 							</li>
+							<!--
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
+							-->
 						</ul>
 					</nav>
 				</header>
@@ -50,9 +52,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>Social App with Crypto Coin</h2>
+							<p>Satoshi published the bitcoin in 2009.<br />
+								Vitalik Buterin in Toronto attempted to improve the script functionality.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -67,23 +69,24 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>浮动服务器floating server</h2>
+										<p>共识机制POW & POO （proof of work and proof of oops)</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>浮动服务器floating server
+										引入一个“抽象中心”的概念。八八币体系中没有中心化的服务器，但从oopser的角度看，有一个专门服务于自己的网络，这个网络只是逻辑概念，称为“抽象中心”。
+										“抽象中心”的是miner矿机群体的某些服务器，由矿机中能提供快捷通讯的候选机器中随机选定。出于隐私的考虑，在聊天session中，一个矿机只提供短暂的时间片服务。时间片临近结束时，另一个随机选择的矿机会承担下一个时间片服务，以此往复。这个时间片可以是5分钟，或者更短如1分钟。
+										在一段通常为12小时的回避期内，oopser对某个特定矿机最多使用一次时间片，除非所有的矿机都轮换过了。
+										</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>消息拼图message puzzle
+										即使在同一个聊天session时间片内，一句话的传送也由多个通道完成，每个通道对应一个矿机。这个设计是出于隐私保护的考虑。
+										举例说明，A对B说“比特币”，一共三个字。oppser app将这句话分成三个字，“比”， “特”， “币”，由随机选择的三个矿机传送。每个矿机只能看到一个字。
+										而B分别从三个矿机收到消息后，拼接成一句完整的话。
+										消息的传送类似于puzzle，发送方先打乱puzzle，分片传送，接收方根据每个puzzle片断header的索引信息，完成拼图。
+										</p>
 								</div>
 							</div>
 						</div>
@@ -96,10 +99,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>reliable decentralized value transfer service </h2>
+							<p>boost development bitcoin became a virtual crypto bank with fixed protocol</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>self-organized cooperation by introducing smart contract and virtual machine.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -112,10 +115,10 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>比特币基于区块链技术。区块链是一串首尾相连的数据块，用嵌套式的哈希算法保证数据块的不可更改性，如果这个数据块不是最后一个</h2>
+							<p>这并不是一个单纯的技术项目，而是积极引入人的动态参与，人，机器，网络一起协作，发展出一个时间轴上等距的脉冲式挖矿奖励机制s</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>让偶然性和必达性集合，做出一个考验算力和运气的博弈平台</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -127,46 +130,46 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>聊天者身份验证 oopser peer validation</h2>
+							<p>聊天者如果回应了短信，也能获得oops奖励</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>区块链</h3>
+									<p>一个有意思的技术是POW（proof of work)共识原理</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>社交网络</h3>
+									<p>扎尔伯格在哈佛大学把“印象分”系统升级成一个人人参与的网页个性秀，展示式社交做到极致</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>八八币</h3>
+									<p>快捷方便可靠的隐私保护聊天服务</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>浮动服务器floating server</h3>
+									<p>抽象中心。八八币体系中没有中心化的服务器</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>消息拼图message puzzle</h3>
+									<p>传送也由多个通道完成，每个通道对应一个矿机</p>
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>共识机制POW & POO</h3>
+									<p>矿工从oopser副链中收集可用的oops，做成一个oops交易</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">oopser block queue slimmingt</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -176,8 +179,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>聊天者区块队列瘦身</h2>
+							<p>oopser block queue的oops交易由每一个聊天时间片产生</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -199,7 +202,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>All rights reserved.</li><li>Design: <a href="https://jonathanyan.github.io">OOPSER COIN</a></li>
 					</ul>
 				</footer>
 
